@@ -1,3 +1,5 @@
+* store the slave updates in 'dyndir', defaulting to 'datadir' --niko
+
 * change the slave update locking code so that reading works without
   write access to the temporary storage file --niko
 
